--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,48 +1,45 @@
 .App {
   margin: 0 auto;
-  width: 600px;
+  width: 500px;
   padding-bottom: 10px;
   margin-top: 20px;
   border-radius: 10px;
   background: rgb(13, 4, 53);
+
+  @media (max-width: 650px) {
+    margin: 0;
+    width: 100%;
+    padding-bottom: 0px;
+    height: 100vh;
+    border-radius: 0px;
+  }
 }
 
 .cards {
-  margin: 0 auto;
-  width: 400px;
+  margin: 0 50px;
+  width: 100%;
   height: 450px;
   border-radius: 10px;
   overflow: auto;
   overflow-wrap: unset;
   margin-bottom: 20px;
   background: rgb(18, 6, 71);
+
+  @media (max-width: 650px) {
+    width: 100%;
+    height: 100%;
+    margin: 15px;
+  }
 }
 
 .cards::-webkit-scrollbar {
   width: 0;
 }
 
-.delete {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
-  margin-top: 350px;
-  color: rgb(226, 102, 19);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 80px;
-}
-
 .heading {
   text-align: center;
   color: white;
   font-size: 30px;
-  font-family: "Myriad Set Pro Ultralight Кириллический";
+  font-family: 'Myriad Set Pro Ultralight Кириллический';
   padding-top: 10px;
-}
-
-.iconDelete {
-  pointer-events: none;
-  transition: font-size 0.2s;
 }
