--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,7 @@
 .App {
   margin: 0 auto;
-  width: 500px;
+  width: 800px;
   padding-bottom: 10px;
-  margin-top: 20px;
   border-radius: 10px;
   background: rgb(13, 4, 53);
 
@@ -15,10 +14,17 @@
   }
 }
 
+.Container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .cards {
   margin: 0 50px;
   width: 100%;
-  height: 450px;
+  height: 600px;
   border-radius: 10px;
   overflow: auto;
   overflow-wrap: unset;
