--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,41 +1,18 @@
-.App {
-  margin: 0 auto;
-  width: 800px;
-  padding-bottom: 10px;
-  border-radius: 10px;
-  background: rgb(13, 4, 53);
-
-  @media (max-width: 650px) {
-    margin: 0;
-    width: 100%;
-    padding-bottom: 0px;
-    height: 100vh;
-    border-radius: 0px;
-  }
-}
-
-.Container {
+.main {
+  height: 100dvh;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  flex-direction: column;
 }
 
 .cards {
   margin: 0 50px;
-  width: 100%;
-  height: 600px;
+  padding: 20px;
   border-radius: 10px;
   overflow: auto;
   overflow-wrap: unset;
   margin-bottom: 20px;
   background: rgb(18, 6, 71);
-
-  @media (max-width: 650px) {
-    width: 100%;
-    height: 100%;
-    margin: 15px;
-  }
+  flex: 1;
 }
 
 .cards::-webkit-scrollbar {
@@ -46,6 +23,6 @@
   text-align: center;
   color: white;
   font-size: 30px;
-  font-family: 'Myriad Set Pro Ultralight Кириллический';
-  padding-top: 10px;
+  font-family: "Myriad Set Pro Ultralight Кириллический";
+  padding: 40px;
 }
